--- a/index.html
+++ b/index.html
@@ -178,8 +178,8 @@
             <div class="row">
                 <div class="col-md-12">
                     <div class="choose_box">
-                        <span data-aos=fade-down>01</span>
-                        <p class="text" data-aos=fade-down>Nuestra prioridad siempre son los clientes, así que
+                        <span data-aos="fade-down">01</span>
+                        <p class="text" data-aos="fade-down">Nuestra prioridad siempre son los clientes, así que
                             buscamos
                             que nuestros
                             clientes puedan
@@ -190,8 +190,8 @@
                 </div>
                 <div class="col-md-12">
                     <div class="choose_box">
-                        <span data-aos=fade-down>02</span>
-                        <p class="text" data-aos=fade-down>Buscamos la conformidad del cliente luego de la venta
+                        <span data-aos="fade-down">02</span>
+                        <p class="text" data-aos="fade-down">Buscamos la conformidad del cliente luego de la venta
                             ofreciendo un servicio de
                             posventa con
                             el cliente.
@@ -201,8 +201,8 @@
 
                 <div class="col-md-12">
                     <div class="choose_box">
-                        <span data-aos=fade-down>03</span>
-                        <p class="text" data-aos=fade-down>Contamos con la red de contactos mas grande de la
+                        <span data-aos="fade-down">03</span>
+                        <p class="text" data-aos="fade-down">Contamos con la red de contactos mas grande de la
                             provincia
                             para ofrecerle lo
                             mejor a
@@ -215,9 +215,9 @@
     </div>
 
     <!--INICIO DE FOOTER-->
-    <section class="footer" data-aos=flip-left>
+    <section class="footer" data-aos="flip-left">
         <h4>Sigamos Conectados</h4>
-        <div class="icons" data-aos=flip-left>
+        <div class="icons" data-aos="flip-left">
             <a href="https://web.whatsapp.com/" target="_blank"><i class="logo-redes fab fa-whatsapp"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
