--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -97,9 +97,9 @@
     </section>
 
     <!--INICIO DE FOOTER-->
-    <section class="footer" data-aos=flip-left>
+    <section class="footer" data-aos="flip-left">
         <h4>Sigamos Conectados</h4>
-        <div class="icons" data-aos=flip-left>
+        <div class="icons" data-aos="flip-left">
             <a href="https://web.whatsapp.com/" target="_blank"><i class="logo-redes fab fa-whatsapp"></i></a>
             <a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook"></i></a>
             <a href="https://twitter.com/home?lang=es" target="_blank"><i class="fab fa-twitter"></i></a>
