--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -61,8 +61,8 @@
     </section>
 
     <!--INICIO DE CONTENIDO MAIN-->
-    <h2 class="animate__animated animate__fadeInDown  animacionH1">Dejanos tu consulta</h2>
-    <p class="animate__animated animate__fadeInDown  animacionH1">Para que un asesor se pongo en contacto con usted a la
+    <h2 class="animate__animated animate__fadeInDown  animacionH1">Déjanos tu consulta</h2>
+    <p class="animate__animated animate__fadeInDown  animacionH1">Para que un asesor se ponga en contacto con usted a la
         brevedad</p>
     <section class="contact-us">
         <div class="row">
