--- a/pages/modelos.html
+++ b/pages/modelos.html
@@ -219,7 +219,7 @@
             <div class="testimonials-col">
                 <img src="../img/cross_img.png">
                 <div>
-                    <span>Muy copada los asesores de ventas, muy buena la atención!</span>
+                    <span>¡Muy copada los asesores de ventas, muy buena la atención!</span>
                     <h6>Alejandro Garcia</h6>
                     <i class="fas fa-star"></i>
                     <i class="fas fa-star"></i>
