--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -63,13 +63,9 @@
     <!--INICIO DE CONTENIDO/MAIN-->
     <h2 class="animate__animated animate__fadeInDown  animacionH1">¿Quienes somos?</h2>
     <p class="animacion animate_animated animate_zoomIn">Somos una empresa que se dedica a ser mediador entre el
-        comprador y zel vendedor de un vehiculo,
-        ya
-        sea
-        automoviles, motocicletas, lo que sea. Entonces conectamos a personas que quirean comprar o
-        vender
-        su
-        vehiculo y le brindamos opciones de compra y venta.</p>
+        comprador y el vendedor de un vehículo, ya sea automóviles, motocicletas, lo que sea. Entonces conectamos a
+        personas que quieran comprar o vender su vehículo y le brindamos opciones de compra y venta.
+    </p>
 
     <section class="about-us">
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
@@ -86,7 +82,7 @@
         <div class="row" data-aos="zoom-in" data-aos-duration="2000">
             <div class="about-col">
                 <h6>Nuestros contactos</h6>
-                <p>Contamos con mas de 20 contactos en toda la provincia de Cordoba, de nuestra confianza que estan
+                <p>Contamos con mas de 20 contactos en toda la provincia de Cordoba, de nuestra confianza que están
                     dispuestos a ofrecerle lo
                     mejor a los clientes</p>
             </div>
