--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <img src="img/gris-silverstone-mobi.png" class="card-img-top" alt="mobiGris">
                 <div class="card-body">
                     <h3 class="card-title">Fiat Mobi</h3>
-                    <p class="card-text">Motor: 1.0 <br> Año: 2015 <br> Kilómetros: 100.000KM <br> Precio:
+                    <p class="card-text">Motor: 1.0L <br> Año: 2015 <br> Kilómetros: 100.000KM <br> Precio:
                         1.200.000
                     </p>
                 </div>
@@ -132,7 +132,7 @@
                 <img src="img/Fiat-500-margen-largo.png" class="card-img-top" alt="fiat500Blanco">
                 <div class="card-body">
                     <h3 class="card-title">Fiat 500</h3>
-                    <p class="card-text">Motor: 1.4 <br> Año: 2014 <br> Kilómetros: 10.000KM <br> Precio:
+                    <p class="card-text">Motor: 1.4L <br> Año: 2014 <br> Kilómetros: 10.000KM <br> Precio:
                         1.100.000
                     </p>
                 </div>
